--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "0.6.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.11.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "flickity": "^2.0.11",
+    "imports-loader": "^0.8.0",
+    "load-google-maps-api-2": "^1.0.2"
+  }
 }
