--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "flickity": "^2.0.11",
     "imports-loader": "^0.8.0",
-    "load-google-maps-api-2": "^1.0.2"
+    "load-google-maps-api-2": "^1.0.2",
+    "magnifier": "^0.4.0"
   }
 }
