--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "facebook-sdk": "^0.3.2",
     "flickity": "^2.0.11",
     "imports-loader": "^0.8.0",
-    "load-google-maps-api-2": "^1.0.2",
-    "magnifier": "^0.4.0"
+    "load-google-maps-api-2": "^1.0.2"
   }
 }
