--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "facebook-sdk": "^0.3.2",
     "flickity": "^2.0.11",
     "imports-loader": "^0.8.0",
-    "load-google-maps-api-2": "^1.0.2"
+    "instagram-api": "^1.0.3",
+    "load-google-maps-api-2": "^1.0.2",
+    "npm": "^5.7.1",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
