--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "facebook-sdk": "^0.3.2",
     "flickity": "^2.0.11",
     "imports-loader": "^0.8.0",
